Fixed email overflow

--- a/assets/css/3-sections/enquiries.sass
+++ b/assets/css/3-sections/enquiries.sass
@@ -49,3 +49,13 @@
   line-height: 1
   width: 90%
   margin: 0 auto
+
+@media (max-width: 640px)
+  .emaillink
+    font:
+      size: 20px
+
+@media only screen and (min-width: 641px) and (max-width: 880px)
+  .emaillink
+    font:
+      size: 33px
